# deeploy-newop-tutorial

./: CMakeLists.txt  Dockerfile  INSTRUCTIONS.md  Makefile  README.md  docker-run.fish  requirements.txt
cmake/: pulp-sdk-siracusa.cmake  simulation.cmake  toolchain_llvm.cmake
kernel/: PULP_vectorAdd.c  PULP_vectorAdd.h  iSoftmax.c  iSoftmax.h
scripts/: Bindings.py  Deployer.py  NetworkInfo.py  Parsers.py  Platform.py  Templates.py  TilingReadyBindings.py  Util.py  codegen.py  testgen.py
test/inc/: CycleCounter.h
test/src/: CycleCounter.c  main.c
util/: dory_dma.h  dory_mem.c
